--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hermes-chat/redis-rpc",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "author": "arthur-er",
@@ -8,7 +8,8 @@
   "private": false,
   "scripts": {
     "test": "nyc ava",
-    "build": "tsc"
+    "build": "tsc",
+    "prepublish": "yarn test && yarn build"
   },
   "ava": {
     "extensions": [
@@ -29,6 +30,7 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "@hermes-chat/redis-rpc": "^2.0.0",
     "emittery": "^0.9.2",
     "ioredis": "^4.27.6",
     "nanoid": "^3.1.23"
